# src/modules/alternatives/dto/response-alternative.dto.ts
@@ -1,0 +1,7 @@
+export class ResponseAlternativeDto {
+  uuid: string;
+  text: string;
+  isCorrect: boolean;
+  questionId: string;
+  createdAt: Date;
+}
